--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -217,12 +217,22 @@ test:acceptance:
 
         current_version=$(reprepro --architecture amd64 --list-format '${version}' list ${codename} ${package_name})
         if [ -z "${current_version}" ]; then
-          # Package doesn't exist, so we assume is "newer"
+          # Package doesn't exist, assume $package_version is "newer"
           return 0
         fi
-        current_version_semver=$(echo $current_version | cut -d"-" -f1 )
+        # Handle git versions
+        if [[ "${current_version}" == *"~git"* ]]; then
+          # Package is master, assume $package_version is "newer"
+          return 0
+        fi
 
-        vercomp $package_version $current_version_semver
+        # Remove debian -1 suffix
+        current_version_semver=$(echo $current_version | sed 's/-1$//' )
+        # Handle build versions for comparison
+        current_version_comp=$(echo $current_version_semver | sed 's/-build/\./' )
+        package_version_comp=$(echo $package_version | sed 's/-build/\./' )
+
+        vercomp $package_version_comp $current_version_comp
         if [ $? -eq 1 ]; then
           return 0
         fi
